--- a/real-time-listen-server/config.json
+++ b/real-time-listen-server/config.json
@@ -1,4 +1,6 @@
 {
     "host": "172.21.213.244",
-    "port": 8888
+    "port": 6666,
+    "path": "D:/zhuomian/real-time/data",
+    "log": "D:/zhuomian/real-time/log/"
 }
