--- a/real-time-listen-server/package.json
+++ b/real-time-listen-server/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "dependencies": {
     "log4js": "^6.8.0",
-    "net": "^1.0.2"
+    "net": "^1.0.2",
+    "node-uuid": "^1.4.8",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {},
   "keywords": [],
