--- a/WebGL/vue-demo/package.json
+++ b/WebGL/vue-demo/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/gl-matrix": "^3.2.0",
     "core-js": "^3.8.3",
+    "gl-matrix": "^3.4.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
