--- a/WebGL/flow-field/package.json
+++ b/WebGL/flow-field/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/mapbox-gl": "^2.7.11",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "mapbox-gl": "^2.15.0",
     "vue": "^3.2.13",
