--- a/real-time-listen-server/config.json
+++ b/real-time-listen-server/config.json
@@ -1,7 +1,7 @@
 {
-    "host": "172.21.213.244",
+    "host": "192.168.108.1",
     "port": 6666,
-    "path": "D:/zhuomian/real-time/data",
-    "log": "D:/zhuomian/real-time/log/",
-    "dbPath": "D:/zhuomian/毕业/node-manage/monitoring.db"
+    "path": "./data",
+    "log": "./log/",
+    "dbPath": "./monitoring.db"
 }
