--- a/WebGL/demo-repository/package.json
+++ b/WebGL/demo-repository/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "gl-matrix": "^3.4.3",
     "mapbox-gl": "2.15",
+    "stats.js": "^0.17.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
